@@ -1,31 +1,4 @@
 #!/usr/bin/env bash
-
-#
-# Copyright 2010 The Apache Software Foundation
-#
-# Licensed to the Apache Software Foundation (ASF) under one
-# or more contributor license agreements.  See the NOTICE file
-# distributed with this work for additional information
-# regarding copyright ownership.  The ASF licenses this file
-# to you under the Apache License, Version 2.0 (the
-# "License"); you may not use this file except in compliance
-# with the License.  You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-set -x
-export JAVA_HOME=/usr/local/jdk1.6.0_20
-ln -s $JAVA_HOME /usr/local/jdk
-
-# Script that is run on each EC2 instance on boot. It is passed in the EC2 user
-# data, so should not exceed 16K in size.
-
 MASTER_HOST=$1
 ZOOKEEPER_QUORUM=$2
 NUM_SLAVES=$3
@@ -37,27 +10,16 @@ if [ "$IS_MASTER" = "true" ]; then
  MASTER_HOST=`wget -q -O - http://169.254.169.254/latest/meta-data/local-hostname`
 fi
 MASTER_HOST=$(echo "$MASTER_HOST" | tr '[:upper:]' '[:lower:]')
-
 HADOOP_HOME=`ls -d /usr/local/hadoop-* | grep -v tar.gz | head -n1`
 HADOOP_VERSION=`echo $HADOOP_HOME | cut -d '-' -f 2`
 HBASE_HOME=`ls -d /usr/local/hbase-* | grep -v tar.gz | head -n1`
 HBASE_VERSION=`echo $HBASE_HOME | cut -d '-' -f 2`
-
 HADOOP_SECURE_DN_USER=hadoop
-
 HOSTNAME=`hostname --fqdn | awk '{print tolower($1)}'`
 HOST_IP=$(host $HOSTNAME | awk '{print $4}')
-
 echo "HADOOP HOME: ${HADOOP_HOME}; HADOOP_VERSION: ${HADOOP_VERSION}"
 echo "HBASE HOME: ${HBASE_HOME}; HBASE_VERSION: ${HBASE_VERSION}"
-
 export USER="root"
-
-
-############
-# Common functions
-#
-
 add_client() {
   user=$1
   pass=$2
@@ -72,23 +34,14 @@ ktadd -k $kt hadoop/$host
 ktadd -k $kt hbase/$host
 quit
 EOF
-
 }
-
-#
-# Setup to run on KDC
-#
 kadmin_setup() {
   kmasterpass=$1
   kadmpass=$2
-
-  # Initialize the kerberos database
   /usr/kerberos/sbin/kdb5_util create -s -P ${kmasterpass}
   service krb5kdc start
   service kadmin start
   sleep 1
-
-  # add standard principals
   /usr/kerberos/sbin/kadmin.local <<EOF 
 add_principal -pw $kadmpass kadmin/admin
 add_principal -pw $kadmpass hadoop/admin
@@ -96,49 +49,28 @@ add_principal -pw had00p hclient
 quit
 EOF
 }
-
-# up file-max
-sysctl -w fs.file-max=32768
-
-# up ulimits
-echo "root soft nofile 32768" >> /etc/security/limits.conf
-echo "root hard nofile 32768" >> /etc/security/limits.conf
-echo "hadoop soft nofile 32768" >> /etc/security/limits.conf
-echo "hadoop hard nofile 32768" >> /etc/security/limits.conf
-
-# up epoll limits; ok if this fails, only valid for kernels 2.6.27+
-sysctl -w fs.epoll.max_user_instances=32768 > /dev/null 2>&1
-
+sysctl -w fs.file-max=65535
+echo "root soft nofile 65535" >> /etc/security/limits.conf
+echo "root hard nofile 65535" >> /etc/security/limits.conf
+ulimit -n 65535
+sysctl -w fs.epoll.max_user_instances=65535 > /dev/null 2>&1
 [ ! -f /etc/hosts ] &&  echo "127.0.0.1 localhost" > /etc/hosts
 echo "$HOST_IP $HOSTNAME" >> /etc/hosts
-
-# note kdc hostname
 echo -n "$MASTER_HOST" > /etc/tm-kdc-hostname
-
-
-# Extra packages
-
 if [ "$EXTRA_PACKAGES" != "" ] ; then
-  # format should be <repo-descriptor-URL> <package1> ... <packageN>
   pkg=( $EXTRA_PACKAGES )
   wget -nv -O /etc/yum.repos.d/user.repo ${pkg[0]}
   yum -y update yum
   yum -y install ${pkg[@]:1}
 fi
-
-# Security setup
-# all servers need krb5 libraries
-yum -y install krb5-libs jakarta-commons-daemon-jsvc
 [ -f $HADOOP_HOME/bin/jsvc ] || ln -s /usr/bin/jsvc $HADOOP_HOME/bin
 adduser hadoop
 groupadd supergroup
 adduser -G supergroup hbase
 if [ "$IS_MASTER" = "true" ]; then
-  yum -y install krb5-server
   cat > /var/kerberos/krb5kdc/kadm5.acl <<EOF
 */admin@HADOOP.LOCALDOMAIN    *
 EOF
-
   cat > /var/kerberos/krb5kdc/kdc.conf <<EOF
 [kdcdefaults]
  v4_mode = nopreauth
@@ -158,7 +90,6 @@ EOF
  }
 EOF
 fi
-
 cat > /etc/krb5.conf <<EOF
 [logging]
  default = FILE:/var/log/krb5libs.log
@@ -202,28 +133,18 @@ cat > /etc/krb5.conf <<EOF
 	krb4_convert = true
 	krb4_get_tickets = false
 EOF
-
-# TODO: generate these from pwgen and pass through.
 KDC_MASTER_PASS="EiSei0Da"
 KDC_ADMIN_PASS="Chohpet6"
-
 if [ "$IS_MASTER" = "true" ]; then
   kadmin_setup $KDC_MASTER_PASS $KDC_ADMIN_PASS
 fi
-
-# add principals for this host
 keytab="$HADOOP_HOME/conf/nn.keytab"
-# create local principals and keytab
 add_client "hadoop/admin" $KDC_ADMIN_PASS $keytab $HOSTNAME
 chown hadoop:hadoop $keytab
-
 if [ "$IS_MASTER" = "true" ]; then
   kadmin_setup $KDC_MASTER_PASS $KDC_ADMIN_PASS
   cd /usr/local/hadoop-*; kinit -k -t conf/nn.keytab hadoop/$HOSTNAME
 fi
-
-# Ganglia
-
 if [ "$IS_MASTER" = "true" ]; then
   sed -i -e "s|\( *mcast_join *=.*\)|#\1|" \
          -e "s|\( *bind *=.*\)|#\1|" \
@@ -243,17 +164,10 @@ else
          /etc/gmond.conf
   service gmond start
 fi
-
-# Reformat sdb as xfs
 umount /mnt
 mkfs.xfs -f /dev/sdb
 mount -o noatime /dev/sdb /mnt
-#mkdir -p /mnt/hadoop/dfs/name
 mkdir -p /mnt/hadoop/dfs/data
-
-# Probe for additional instance volumes
-
-# /dev/sdb as /mnt is always set up by base image
 DFS_NAME_DIR="/mnt/hadoop/dfs/name"
 DFS_DATA_DIR="/mnt/hadoop/dfs/data"
 i=2
@@ -272,13 +186,10 @@ for d in c d e f g h i j k l m n o p q r s t u v w x y z; do
     i=$(( i + 1 ))
   fi
 done
-
-# Hadoop configuration
 cat >> $HADOOP_HOME/conf/hadoop-env.sh <<EOF
 export HADOOP_OPTS="$HADOOP_OPTS -Djavax.security.auth.useSubjectCredsOnly=false"
 export HADOOP_SECURE_DN_USER=hadoop
 EOF
-
 ( cd /usr/local && ln -s $HADOOP_HOME hadoop ) || true
 cat > $HADOOP_HOME/conf/core-site.xml <<EOF
 <?xml version="1.0"?>
@@ -324,7 +235,7 @@ cat > $HADOOP_HOME/conf/hdfs-site.xml <<EOF
 </property>
 <property>
   <name>dfs.support.append</name>
-  <value>false</value>
+  <value>true</value>
 </property>
 <property>
   <name>dfs.datanode.handler.count</name>
@@ -467,15 +378,13 @@ cat > $HADOOP_HOME/conf/mapred-site.xml <<EOF
 </property>
 </configuration>
 EOF
-# Add JVM options
 cat >> $HADOOP_HOME/conf/hadoop-env.sh <<EOF
+export JAVA_HOME=/usr/local/jdk
 export HADOOP_OPTS="$HADOOP_OPTS -XX:+UseCompressedOops"
 EOF
-# Update classpath to include HBase jars and config
 cat >> $HADOOP_HOME/conf/hadoop-env.sh <<EOF
-export HADOOP_CLASSPATH="$HBASE_HOME/hbase-${HBASE_VERSION}.jar:$HBASE_HOME/lib/AgileJSON-2009-03-30.jar:$HBASE_HOME/lib/json.jar:$HBASE_HOME/lib/zookeeper-3.3.0.jar:$HBASE_HOME/conf"
+HADOOP_CLASSPATH="$HBASE_HOME/hbase-${HBASE_VERSION}.jar:$HBASE_HOME/lib/zookeeper-3.3.1.jar:$HBASE_HOME/conf"
 EOF
-# Configure Hadoop for Ganglia
 cat > $HADOOP_HOME/conf/hadoop-metrics.properties <<EOF
 dfs.class=org.apache.hadoop.metrics.ganglia.GangliaContext
 dfs.period=10
@@ -487,9 +396,6 @@ mapred.class=org.apache.hadoop.metrics.ganglia.GangliaContext
 mapred.period=10
 mapred.servers=$MASTER_HOST:8649
 EOF
-
-# HBase configuration
-
 ( cd /usr/local && ln -s $HBASE_HOME hbase ) || true
 cat > $HBASE_HOME/conf/hbase-site.xml <<EOF
 <?xml version="1.0"?>
@@ -528,36 +434,12 @@ cat > $HBASE_HOME/conf/hbase-site.xml <<EOF
   <value>100</value>
 </property>
 <property>
-  <name>hfile.block.cache.size</name>
-  <value>0.3</value>
-</property>
-<property>
-  <name>hbase.regionserver.global.memstore.upperLimit</name>
-  <value>0.3</value>
-</property>
-<property>
-  <name>hbase.regionserver.global.memstore.lowerLimit</name>
-  <value>0.25</value>
-</property>
-<property>
   <name>hbase.hregion.memstore.block.multiplier</name>
-  <value>4</value>
+  <value>3</value>
 </property>
 <property>
   <name>hbase.hstore.blockingStoreFiles</name>
   <value>15</value>
-</property>
-<property>
-  <name>dfs.replication</name>
-  <value>2</value>
-</property>
-<property>
-  <name>dfs.support.append</name>
-  <value>false</value>
-</property>
-<property>
-  <name>dfs.client.block.write.retries</name>
-  <value>20</value>
 </property>
 <property>
   <name>dfs.datanode.socket.write.timeout</name>
@@ -598,7 +480,6 @@ cat > $HBASE_HOME/conf/hbase-site.xml <<EOF
 </property>
 </configuration>
 EOF
-
 cat > $HBASE_HOME/conf/hadoop-policy.xml <<EOF
 <?xml version="1.0"?>
 <?xml-stylesheet type="text/xsl" href="configuration.xsl"?>
@@ -617,21 +498,16 @@ cat > $HBASE_HOME/conf/hadoop-policy.xml <<EOF
   </property>
 </configuration>
 EOF
-# link in hadoop config (for dfs client)
 ln -s $HADOOP_HOME/conf/core-site.xml $HBASE_HOME/conf/
 ln -s $HADOOP_HOME/conf/hdfs-site.xml $HBASE_HOME/conf/
 ln -s $HADOOP_HOME/conf/mapred-site.xml $HBASE_HOME/conf/
-# Override JVM options
 cat >> $HBASE_HOME/conf/hbase-env.sh <<EOF
 export JAVA_HOME=/usr/local/jdk
-export HBASE_LOG_DIR=/mnt/hbase/logs
-export HBASE_MASTER_OPTS="-Xmx1000m -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+DoEscapeAnalysis -XX:+AggressiveOpts -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:/mnt/hbase/logs/hbase-master-gc.log"
-export HBASE_REGIONSERVER_OPTS="-Xmx4000m -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=88 -XX:NewSize=128m -XX:MaxNewSize=128m -XX:+DoEscapeAnalysis -XX:+AggressiveOpts -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:/mnt/hbase/logs/hbase-regionserver-gc.log"
+export HBASE_MASTER_OPTS="-Xmx1000m -XX:+UseConcMarkSweepGC -XX:NewSize=128m -XX:MaxNewSize=128m -XX:+AggressiveOpts -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:/mnt/hbase/logs/hbase-master-gc.log"
+export HBASE_REGIONSERVER_OPTS="-Xmx2000m -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=88 -XX:NewSize=128m -XX:MaxNewSize=128m -XX:+AggressiveOpts -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:/mnt/hbase/logs/hbase-regionserver-gc.log"
 EOF
-# Configure log4j
 sed -i -e 's/hadoop.hbase=DEBUG/hadoop.hbase=INFO/g' \
     $HBASE_HOME/conf/log4j.properties
-# Configure HBase for Ganglia
 cat > $HBASE_HOME/conf/hadoop-metrics.properties <<EOF
 dfs.class=org.apache.hadoop.metrics.ganglia.GangliaContext
 dfs.period=10
@@ -643,29 +519,19 @@ jvm.class=org.apache.hadoop.metrics.ganglia.GangliaContext
 jvm.period=10
 jvm.servers=$MASTER_HOST:8649
 EOF
-
 mkdir -p /mnt/hadoop/logs /mnt/hbase/logs
-# FIXME: tighten ownership/perms
 chmod 777 /mnt/hadoop/logs
-
 if [ "$IS_MASTER" = "true" ]; then
   # only format on first boot
   [ ! -e /mnt/hadoop/dfs/name ] && "$HADOOP_HOME"/bin/hadoop namenode -format
   "$HADOOP_HOME"/bin/hadoop-daemon.sh start namenode
   "$HADOOP_HOME"/bin/hadoop-daemon.sh start jobtracker
-
-  #<must be done after hadoop startup, and before hbase startup>
   "$HADOOP_HOME"/bin/hadoop fs -mkdir /hbase
   "$HADOOP_HOME"/bin/hadoop fs -chown hbase /hbase
-  #</must be done after hadoop startup, and before hbase startup>
-
-  "$HBASE_HOME"/bin/hbase-daemon.sh start master
 else
-    if [ "$IS_AUX" != "true" ]; then
-	"$HADOOP_HOME"/bin/hadoop-daemon.sh start datanode
-        "$HBASE_HOME"/bin/hbase-daemon.sh start regionserver
-        "$HADOOP_HOME"/bin/hadoop-daemon.sh start tasktracker
-    fi
+  if [ "$IS_AUX" != "true" ]; then
+    "$HADOOP_HOME"/bin/hadoop-daemon.sh start datanode
+    "$HADOOP_HOME"/bin/hadoop-daemon.sh start tasktracker
+  fi
 fi
-
 rm -f /var/ec2/ec2-run-user-data.*
